--- a/projetos/agenda/node/package.json
+++ b/projetos/agenda/node/package.json
@@ -23,7 +23,8 @@
     "helmet": "^7.0.0",
     "mongoose": "^7.3.1",
     "regenerator-runtime": "^0.13.11",
-    "style-loader": "^3.3.3"
+    "style-loader": "^3.3.3",
+    "uri-js": "^4.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
