--- a/projetos/agenda/node/package.json
+++ b/projetos/agenda/node/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "core-js": "^3.31.0",
@@ -24,7 +25,8 @@
     "mongoose": "^7.3.1",
     "regenerator-runtime": "^0.13.11",
     "style-loader": "^3.3.3",
-    "uri-js": "^4.2.2"
+    "uri-js": "^4.2.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
